--- a/index.html
+++ b/index.html
@@ -29,5 +29,39 @@
             </li>
         </ul>
     </nav>
+    
+    <footer class="footer">
+        <nav class="bottom-nav">
+            <div class="bottom-search-links">
+                <ul class="bottom-nav-list">
+                    <li>
+                        <a class="bottom-nav-link" href="#">About</a>
+                    </li>
+                    <li>
+                        <a class="bottom-nav-link" href="#">Advertising</a>
+                    </li>
+                    <li>
+                        <a class="bottom-nav-link" href="#">Business</a>
+                    </li>
+                    <li>
+                        <a class="bottom-nav-link" href="#">How Search works</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="bottom-account-links">
+                <ul class="bottom-nav-list">
+                    <li>
+                        <a class="bottom-nav-link" href="#">Privacy</a>
+                    </li>
+                    <li>
+                        <a class="bottom-nav-link" href="#">Terms</a>
+                    </li>
+                    <li>
+                        <a class="bottom-nav-link" href="#">Settings</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
