Added flexible width to search google logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </a>
             </li>
             <li>
-                <a class="profile-picture-link top-nav-link" href="https://github.com/yamanidev">
+                <a class="profile-picture-link top-nav-link" href="https://github.com/yamanidev" target="_blank">
                     <img class="profile-picture" src="images/profile-picture.JPG" alt="profile picture with a child in a car wearing sunglasses">
                 </a>
             </li>
@@ -31,7 +31,7 @@
     </nav>
     <main>
         <div class="search-container">
-            <div class="search-logo">
+            <div class="search-google-logo">
                 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google's logo">
             </div>
             <form class="search-form">
